--- a/css/style.css
+++ b/css/style.css
@@ -564,8 +564,11 @@ body {
     border-radius: 5px;
     align-items: flex-start;
     background: var(--bg-primary);
-    }
-
+  }
+  
+  #title{
+    font-size: 1.5rem;
+  }
   .navbar .btn {
     margin: 0;
     margin-top: 1rem;
