--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,55 @@ body {
   color: rgba(var(--primary-color), var(--tw-text-opacity));
 }
 
+.hidden {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 0.5s ease, transform 0.5s ease; /* Added transition for opacity and transform */
+}
+
+.show {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+/* Set transition delay for each skill */
+.skill:nth-child(1) {
+  transition-delay: 0.15s; /* Show with a delay of 0.15s */
+}
+
+.skill:nth-child(2) {
+  transition-delay: 0.3s; /* Show with a delay of 0.3s */
+}
+
+.skill:nth-child(3) {
+  transition-delay: 0.45s; /* Show with a delay of 0.45s */
+}
+
+.skill:nth-child(4) {
+  transition-delay: 0.6s; /* Show with a delay of 0.6s */
+}
+
+.skill:nth-child(5) {
+  transition-delay: 0.75s; /* Show with a delay of 0.75s */
+}
+
+.skill:nth-child(6) {
+  transition-delay: 0.9s; /* Show with a delay of 0.9s */
+}
+
+.skill:nth-child(7) {
+  transition-delay: 1.05s; /* Show with a delay of 1.05s */
+}
+
+.skill:nth-child(8) {
+  transition-delay: 1.2s; /* Show with a delay of 1.2s */
+} 
+
+.skill:nth-child(9) {
+  transition-delay: 1.35s; /* Show with a delay of 1.35s */
+}
+
+
 @media (min-width: 769px) {
   .about {
     width: 49%;
