--- a/css/utilities.css
+++ b/css/utilities.css
@@ -157,6 +157,10 @@ h4::selection {
   opacity: 1;
 }
 
+.git-project {
+  color: white !important;
+}
+
 /* Project Images */
 
 /* project 1 */
@@ -166,7 +170,7 @@ h4::selection {
 
 /* Project 2 */
 .card:nth-child(2) {
-  background: url(../assets/project/project-two.png) center center/cover;
+  background: url(../assets/project/porfolio.png) center center/cover;
 }
 
 /* Project 3 */
