--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   position: absolute;
-  margin-top: 100px;
+  margin-top: 125px;
   top: 0;
   right: 0;
   z-index: 9999;
@@ -569,6 +569,17 @@ body {
 
 /* Set transition delay for each skill */
 
+/* banner */
+/* Banner at the top */
+.banner {
+  background-color: var(--primary-color);
+  padding: 0.5rem;
+  text-align: center;
+  width: 100%;
+  position: relative;
+  top: 0;
+  z-index: 100;
+}
 
 
 @media (min-width: 769px) {
@@ -688,7 +699,7 @@ body {
   .player {
     width: 100%;
     border-radius: 0;
-    margin-top: 100px;
+    margin-top: 125px;
   }
 
   .toggle-icons > img {
@@ -724,6 +735,7 @@ body {
     align-items: center;
   
   }
+
 }
 
 @media (max-width: 600px) {
